# almanac

./: .gitignore  CHANGELOG.md  README.md  almanac.cabal  hie.yaml  shell.nix
.github/workflows/: test.yml
nix/: extra-deps.nix  packages.nix  release.nix
nix/extra-pkgs/: swiss-ephemeris.nix
src/: Almanac.hs
src/Almanac/: EclipticLongitude.hs  Ephemeris.hs  Event.hs  Extras.hs  Import.hs  Optics.hs  Query.hs
src/Almanac/Event/: Crossing.hs  Eclipse.hs  LunarPhase.hs  PlanetStation.hs  Transit.hs  Types.hs
src/Almanac/Internal/: Lens.hs
test/: AlmanacSpec.hs  Spec.hs  SpecUtils.hs
test/ephe/: sep4_245  sep4_246  sep4_247  sep4_248
