cabal-version:      2.4
name:               almanac
version:            0.1.0.0

synopsis: utilities for ephemeris analysis

license-file: LICENSE
author:             Luis Borjas Reyes
maintainer:         luisfborjas@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules: 
      Almanac 

    -- Modules included in this library but not exported.
    other-modules:
      Almanac.Import
      Almanac.EclipticLongitude
      Almanac.Event.Crossing
      Almanac.Event.Eclipse
      Almanac.Event.LunarPhase
      Almanac.Event.PlanetStation
      Almanac.Event.Transit
      Almanac.Event.Types
      Almanac.Event
      Almanac.Query

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.14.1.0
      ,containers
      ,swiss-ephemeris ^>= 1.4.0.0
      ,time
      ,streaming
      ,foldl
      ,vector

    hs-source-dirs:   src
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    default-language: Haskell2010
