cabal-version:      2.4
name:               almanac
version:            0.1.0.0

synopsis: utilities for ephemeris analysis
description: See README at <https://github.com/lfborjas/almanac>
category: Astrology

license-file: LICENSE
author:             Luis Borjas Reyes
maintainer:         luisfborjas@gmail.com
bug-reports: https://github.com/lfborjas/almanac/issues

extra-source-files: 
    CHANGELOG.md
    LICENSE
    README.md
    test/ephe/sep4_244

source-repository head
    type: git
    location: https://github.com/lfborjas/almanac

-- Inspired by:
-- https://github.com/tchoutri/pg-entity/blob/e5fc4cfe8fcaf2a5a6d76f983c9a60b25a57777a/pg-entity.cabal 
common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        OverloadedStrings  
    default-language: Haskell2010

common common-ghc-options
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
    import: common-extensions
    import: common-ghc-options
    exposed-modules: 
      Almanac 
      Almanac.Extras

    -- Modules included in this library but not exported.
    other-modules:
      Almanac.Import
      Almanac.EclipticLongitude
      Almanac.Event.Crossing
      Almanac.Event.Eclipse
      Almanac.Event.LunarPhase
      Almanac.Event.PlanetStation
      Almanac.Event.Transit
      Almanac.Event.Types
      Almanac.Event
      Almanac.Query

    -- other-extensions:
    build-depends:    
      base >= 4.13 && <= 4.17
      ,containers
      ,swiss-ephemeris >= 1.4.1 && <2
      ,time
      ,streaming
      ,foldl
      ,vector

    hs-source-dirs:   src

test-suite almanac-test
    import: common-extensions
    import: common-ghc-options
    type: exitcode-stdio-1.0
    main-is: 
        Spec.hs
    other-modules:
        AlmanacSpec
        SpecUtils
    hs-source-dirs:
        test
    build-depends:
        almanac
        , base
        , containers
        , directory
        , hspec
        , QuickCheck >= 2.12 && <=2.15
        , random
        , swiss-ephemeris
        , time

